# conan-ilmbase

./: .gitignore  .travis.yml  FindIlmBase.cmake  README.md  appveyor.yml  build.py  conanfile.py
test_package/: CMakeLists.txt  testMatrix.cpp
test_package_pc/: CMakeLists.txt  conanfile.py  main.cpp
